CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.17

	- The ppdOpen*() functions now reset the numeric locale
	  settings while loading a PPD file.
	- Fixed the libtool build rules.
	- The manpage make rules didn't use $(MAKE) and
	  $(MFLAGS) for the language subdirectories.
	- Now set the LC_TIME locale category to get the
	  properly localized time string.
	- Fixed a problem in the scheduler that would cause the
	  web interface problems when adding, modifying, or
	  configuring a printer or class.
	- The backends now ignore SIGPIPE so that failed job
	  filters will not stop a print queue.
	- The lpstat command did not allow for destination lists
	  ("lpstat -v printer1,printer2")
	- Fixed parsing of long filter status messages in the
	  scheduler.
	- Added some startup performance enhancements to the
	  scheduler so that the printer object information is
	  regenerated fewer times and the MIME type database is
	  not filled with lots of empty filters for raw/direct
	  queues.
	- The LPD backend now sends the job title as the print
	  filename.
	- Added support for variable sizes in the EPSON dot
	  matrix printer drivers.  This allows for pages as
	  short as 1/2" (1 row of labels) and does not do an
	  automatic form feed.
	- French translation updates.
	- The filters did not quote the page label string when
	  embedding it in PostScript output.
	- The serial backend now enumerates serial ports under
	  MacOS X.
	- The pdftops filter contained font rasterizer code that
	  wasn't being used and that depended on X11.  This code
	  has been removed.


CHANGES IN CUPS V1.1.16

	- The cancel and lprm commands now both display an error
	  message and return a non-zero exit status if an
	  attempt is made to cancel a job on a non-existent
	  printer.
	- The lpoptions command incorrectly complained if a
	  request to delete a non-existent printer was made.
	- If the client.conf file defines an alternate server
	  name, the "configure printer" action in the web